--- a/ADORE_pipeline.ipynb
+++ b/ADORE_pipeline.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "authorship_tag": "ABX9TyMfrfU7pe3nfRdLib3ewXsB",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ruslanmv/Agent-driven-Ontology-Repair-and-Evolution/blob/master/ADORE_pipeline.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
